--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1000px;
+  max-width: 830px;
   min-width: 400px;
   min-height: 100vh;
   background: #171619;
@@ -53,6 +53,8 @@ h1 {
   border: 4px solid #ffffff;
   border-radius: 20px;
   overflow: hidden;
+  width: 822px;
+  height: 347px;
 }
 .img-container:hover {
   border-color: rgb(140, 130, 240);
@@ -74,13 +76,19 @@ h1 {
   left: 0;
   width: 100%;
   height: 30%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.85);
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   font-weight: bold;
   color: white;
+}
+.mag-img {
+  height: 31px;
+  width: 31px;
+  margin-top: -4px;
+  margin-bottom: -4px;
 }
 
 /* Desktop Layout */
@@ -106,7 +114,7 @@ h1 {
     padding-top: 10px;
     margin-top: 0px;
   }
-  #searchdex {
-    content: url("searchdexsquare.png");
+  .img-container {
+    width: 396px;
   }
 }
